test/tests/errors/error-function-env.sm
// true
// false
/**/
/**/

program {
    func a(b) {
        b + x
    }
    const x = 1;
    output a(1);
}